2015-09-03  c.hetherington  <cth@carlh.net>

	* Add option to always analyse audio
	and put the peak value into the audio
	tab so it's easy to see (#673).

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.2.0 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.65 released.

2015-09-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.64 released.

2015-09-12  Carl Hetherington  <cth@carlh.net>

	* Several fixes to SMPTE subtitle syntax.

	* Version 2.1.63 released.

2015-09-11  Carl Hetherington  <cth@carlh.net>

	* Fix assertion failure when creating 6-channel DCPs
	using the mid-side processor.

2015-09-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.62 released.

2015-09-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.61 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.60 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.1.59 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.59 released.

2015-09-09  c.hetherington  <cth@carlh.net>

	* Use SRC_LINEAR when resampling for
	audio analysis to speed things up (#685).

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.58 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Actually fix missing libsamplerate
	dylib for OS X.

2015-09-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.57 released.

2015-09-08  c.hetherington  <cth@carlh.net>

	* Missing libsamplerate dylib for OS X.

2015-09-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.56 released.

2015-09-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.55 released.

2015-09-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.54 released.

2015-09-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.53 released.

2015-09-04  Carl Hetherington  <cth@carlh.net>

	* Use libsamplerate for resampling instead
	of FFmpeg / libsoxr.
